--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- navbar  -->
-    <header>
+    <header class="container">
         <nav class="navbar navbar-expand-lg bg-secondary bg-opacity-10">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" class="img-fluid" alt=""></a>
@@ -40,7 +40,107 @@
                 </div>
             </div>
         </nav>
+        <!-- slider start -->
+        <section class="mt-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active bg-danger bg-opacity-10 border rounded p-5"data-bs-interval="5000">
+                        <div class="row">
+                            <div class="col-md-7 d-flex align-items-center">
+                                <div>
+                                    <h1 class="fw-bold">Cool Dude Headphone</h1>
+                                    <p>This is the best headphone in the world for people who just want to waste time in
+                                        front of funky world.</p>
+                                    <h1 class="fw-bold text-warning">$410</h1>
+                                    <button class="btn btn-warning mt-1">Buy now</button>
+                                </div>
+                            </div>
+                            <div class="col-md-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="..."class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item bg-danger bg-opacity-10 border rounded p-5"data-bs-interval="5000">
+                        <div class="row">
+                            <div class="col-md-7 d-flex align-items-center">
+                                <div>
+                                    <h1> LCD TV For Sports </h1>
+                                    <p>This is the best tv in the world for people who just want to waste time in front of tv. </p>
+                                    <h1>$1410</h1>
+                                    <button class="btn btn-warning">Buy now</button>
+                                </div>
+                            </div>
+                            <div class="col-md-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="..."class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item bg-danger bg-opacity-10 border rounded p-5"data-bs-interval="5000">
+                        <div class="row">
+                            <div class="col-md-7 d-flex align-items-center">
+                                <div>
+                                    <h1>X-BOX for your living room</h1>
+                                    <p>This is the best X-BOX in the world for people who just want to waste time in
+                                        front of funky world.</p>
+                                    <h1>$410</h1>
+                                    <button class="btn btn-warning">Buy now</button>
+                                </div>
+                            </div>
+                            <div class="col-md-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="..."class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+        <!-- slider end  -->
     </header>
+    <main>
+        <!-- catagories start  -->
+        <section>
+            <div class="container overflow-hidden text-center my-5">
+                <div class="row gy-3">
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-3 border bg-warning text-white rounded-3">
+                        <div class="d-flex align-items-center justify-content-around ">
+                            <h1>Watch</h1>
+                    <img class="img-fluid" src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-3 border bg-danger text-white rounded-3">
+                        <div class="d-flex align-items-center justify-content-around ">
+                            <h1>Bag</h1>
+                    <img class="img-fluid" src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-3 border bg-primary text-white rounded-3">
+                        <div class="d-flex align-items-center justify-content-around ">
+                            <h1>Shoes</h1>
+                    <img class="img-fluid" src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <!-- catagories end  -->
+    </main>
 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
