--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active bg-danger bg-opacity-10 border rounded p-5"data-bs-interval="5000">
+                    <div class="carousel-item active bg-danger bg-opacity-10 border rounded p-5"
+                        data-bs-interval="5000">
                         <div class="row">
                             <div class="col-md-7 d-flex align-items-center">
                                 <div>
@@ -56,26 +57,29 @@
                                 </div>
                             </div>
                             <div class="col-md-5">
-                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="..."class="img-fluid">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="..."
+                                    class="img-fluid">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item bg-danger bg-opacity-10 border rounded p-5"data-bs-interval="5000">
+                    <div class="carousel-item bg-danger bg-opacity-10 border rounded p-5" data-bs-interval="5000">
                         <div class="row">
                             <div class="col-md-7 d-flex align-items-center">
                                 <div>
                                     <h1> LCD TV For Sports </h1>
-                                    <p>This is the best tv in the world for people who just want to waste time in front of tv. </p>
+                                    <p>This is the best tv in the world for people who just want to waste time in front
+                                        of tv. </p>
                                     <h1>$1410</h1>
                                     <button class="btn btn-warning">Buy now</button>
                                 </div>
                             </div>
                             <div class="col-md-5">
-                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="..."class="img-fluid">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="..."
+                                    class="img-fluid">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item bg-danger bg-opacity-10 border rounded p-5"data-bs-interval="5000">
+                    <div class="carousel-item bg-danger bg-opacity-10 border rounded p-5" data-bs-interval="5000">
                         <div class="row">
                             <div class="col-md-7 d-flex align-items-center">
                                 <div>
@@ -87,7 +91,8 @@
                                 </div>
                             </div>
                             <div class="col-md-5">
-                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="..."class="img-fluid">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="..."
+                                    class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -112,34 +117,98 @@
         <section>
             <div class="container overflow-hidden text-center my-5">
                 <div class="row gy-3">
-                  <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="p-3 border bg-warning text-white rounded-3">
-                        <div class="d-flex align-items-center justify-content-around ">
-                            <h1>Watch</h1>
-                    <img class="img-fluid" src="images/categories/watch.png" alt="">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-warning text-white rounded-3">
+                            <div class="d-flex align-items-center justify-content-around ">
+                                <h1>Watch</h1>
+                                <img class="img-fluid" src="images/categories/watch.png" alt="">
+                            </div>
                         </div>
                     </div>
-                  </div>
-                  <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="p-3 border bg-danger text-white rounded-3">
-                        <div class="d-flex align-items-center justify-content-around ">
-                            <h1>Bag</h1>
-                    <img class="img-fluid" src="images/categories/bag.png" alt="">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-danger text-white rounded-3">
+                            <div class="d-flex align-items-center justify-content-around ">
+                                <h1>Bag</h1>
+                                <img class="img-fluid" src="images/categories/bag.png" alt="">
+                            </div>
                         </div>
                     </div>
-                  </div>
-                  <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="p-3 border bg-primary text-white rounded-3">
-                        <div class="d-flex align-items-center justify-content-around ">
-                            <h1>Shoes</h1>
-                    <img class="img-fluid" src="images/categories/shoes.png" alt="">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-primary text-white rounded-3">
+                            <div class="d-flex align-items-center justify-content-around ">
+                                <h1>Shoes</h1>
+                                <img class="img-fluid" src="images/categories/shoes.png" alt="">
+                            </div>
                         </div>
                     </div>
-                  </div>
                 </div>
-              </div>
+            </div>
         </section>
         <!-- catagories end  -->
+
+
+        <!-- shoe section start from here  -->
+        <section class="container">
+            <h1>Shoes</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-3">
+                <div class="col">
+                    <div class="card border border-0 h-100  rounded shadow-lg">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">supply 350</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer border border-0 m-3">
+                            <div class="btn btn-warning">
+                             Buy Now
+                            </div>
+                         </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 h-100  rounded shadow-lg"">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">nike 360</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer border border-0 m-3">
+                            <div class="btn btn-warning">
+                             Buy Now
+                            </div>
+                         </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 h-100  rounded shadow-lg"">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax </h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content.</p>
+                        </div>
+                        <div class="card-footer border border-0 m-3">
+                            <div class="btn btn-warning">
+                             Buy Now
+                            </div>
+                         </div>
+                    </div>
+                </div>
+                
+            </div>
+
+
+
+
+        </section>
+
+
+
+
+
+        <!-- shoes section end here  -->
     </main>
 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
