--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                         <img src="images/shoes/shoe-1.png" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">supply 350</h5>
+                            <h3>$450</h3>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
                                 to additional content. This content is a little bit longer.</p>
                         </div>
@@ -171,6 +172,7 @@
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">nike 360</h5>
+                            <h3>$450</h3>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
                                 to additional content. This content is a little bit longer.</p>
                         </div>
@@ -186,6 +188,65 @@
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax </h5>
+                            <h3>$450</h3>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content.</p>
+                        </div>
+                        <div class="card-footer border border-0 m-3">
+                            <div class="btn btn-warning">
+                             Buy Now
+                            </div>
+                         </div>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
+        <!-- shoes section end here  -->
+
+
+        <!-- bag section start  -->
+        <section class="container mt-4">
+            <h1>Backpack</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-1">
+                <div class="col">
+                    <div class="card border border-0 h-100  rounded shadow-lg">
+                        <img src="images/bags/bag-1.png" class="card-img-top img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Bag 1</h5>
+                            <h3>$450</h3>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer border border-0 m-3">
+                            <div class="btn btn-warning">
+                             Buy Now
+                            </div>
+                         </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 h-100  rounded shadow-lg"">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">heavy one</h5>
+                            <h3>$450</h3>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer border border-0 m-3">
+                            <div class="btn btn-warning">
+                             Buy Now
+                            </div>
+                         </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 h-100  rounded shadow-lg"">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">bolder one</h5>
+                            <h3>$450</h3>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
                                 to additional content.</p>
                         </div>
@@ -199,16 +260,8 @@
                 
             </div>
 
-
-
-
         </section>
-
-
-
-
-
-        <!-- shoes section end here  -->
+        <!-- bag section end  -->
     </main>
 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
