--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <!-- bootstrap css url  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <title>Panda commerce</title>
+    <!-- custom css  -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- navbar  -->
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-secondary bg-opacity-10">
+        <nav class="navbar navbar-expand-lg bg-white bg-opacity-100 fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" class="img-fluid" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-mybar"
@@ -26,14 +28,14 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoe's</a>
+                            <a class="nav-link" href="#shoes">Shoe's</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="#bags">
                                 Backpack
                             </a>
                         <li class="nav-item">
-                            <a class="nav-link">Subscribe</a>
+                            <a class="nav-link" href="#subs">Subscribe</a>
                         </li>
                     </ul>
 
@@ -53,7 +55,7 @@
                                     <p>This is the best headphone in the world for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1 class="fw-bold text-warning">$410</h1>
-                                    <button class="btn btn-warning mt-1">Buy now</button>
+                                    <button class="btn btn-warning-btn mt-1">Buy now</button>
                                 </div>
                             </div>
                             <div class="col-md-5">
@@ -70,7 +72,7 @@
                                     <p>This is the best tv in the world for people who just want to waste time in front
                                         of tv. </p>
                                     <h1>$1410</h1>
-                                    <button class="btn btn-warning">Buy now</button>
+                                    <button class="btn btn-warning-btn">Buy now</button>
                                 </div>
                             </div>
                             <div class="col-md-5">
@@ -87,7 +89,7 @@
                                     <p>This is the best X-BOX in the world for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1>$410</h1>
-                                    <button class="btn btn-warning">Buy now</button>
+                                    <button class="btn btn-warning-btn">Buy now</button>
                                 </div>
                             </div>
                             <div class="col-md-5">
@@ -148,7 +150,7 @@
 
 
         <!-- shoe section start from here  -->
-        <section class="container">
+        <section class="container catagories g-lg-4" id="shoes">
             <h1>Shoes</h1>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-3">
                 <div class="col">
@@ -161,7 +163,7 @@
                                 to additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="card-footer border border-0 m-3">
-                            <div class="btn btn-warning">
+                            <div class="btn btn-warning-btn">
                              Buy Now
                             </div>
                          </div>
@@ -177,7 +179,7 @@
                                 to additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="card-footer border border-0 m-3">
-                            <div class="btn btn-warning">
+                            <div class="btn btn-warning-btn">
                              Buy Now
                             </div>
                          </div>
@@ -193,7 +195,7 @@
                                 to additional content.</p>
                         </div>
                         <div class="card-footer border border-0 m-3">
-                            <div class="btn btn-warning">
+                            <div class="btn btn-warning-btn">
                              Buy Now
                             </div>
                          </div>
@@ -206,7 +208,7 @@
 
 
         <!-- bag section start  -->
-        <section class="container mt-4">
+        <section class="container mt-4" id="bags">
             <h1>Backpack</h1>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-1">
                 <div class="col">
@@ -219,7 +221,7 @@
                                 to additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="card-footer border border-0 m-3">
-                            <div class="btn btn-warning">
+                            <div class="btn btn-warning-btn">
                              Buy Now
                             </div>
                          </div>
@@ -235,7 +237,7 @@
                                 to additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="card-footer border border-0 m-3">
-                            <div class="btn btn-warning">
+                            <div class="btn btn-warning-btn">
                              Buy Now
                             </div>
                          </div>
@@ -251,7 +253,7 @@
                                 to additional content.</p>
                         </div>
                         <div class="card-footer border border-0 m-3">
-                            <div class="btn btn-warning">
+                            <div class="btn btn-warning-btn">
                              Buy Now
                             </div>
                          </div>
@@ -262,7 +264,23 @@
 
         </section>
         <!-- bag section end  -->
+        <!-- Subscribe start  -->
+        <section class="container mt-lg-5 mt-md-4 mt-sm-4 d-flex justify-content-center bg-danger bg-opacity-10 align-items-center" style="height: 300px;" id="subs">
+            <div>
+                <h2>LETS STAY IN TOUCH</h2>
+            <P>Get updates on sales, specials and more </P>
+            <form>
+                <div class="mb-3">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <button type="submit" class="btn btn-warning-btn">Submit</button>
+              </form>
+            </div>
+        </section>
     </main>
+    <footer>
+        <p class="text-center"><small> @2022Lorem, ipsum dolor sit amet consectetur</small></p>
+    </footer>
 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
