--- a/index.html
+++ b/index.html
@@ -164,14 +164,14 @@
                         </div>
                         <div class="card-footer border border-0 m-3">
                             <div class="btn btn-warning-btn">
-                             Buy Now
+                                Buy Now
                             </div>
-                         </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card border border-0 h-100  rounded shadow-lg"">
-                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <img src=" images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">nike 360</h5>
                             <h3>$450</h3>
@@ -180,14 +180,14 @@
                         </div>
                         <div class="card-footer border border-0 m-3">
                             <div class="btn btn-warning-btn">
-                             Buy Now
+                                Buy Now
                             </div>
-                         </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card border border-0 h-100  rounded shadow-lg"">
-                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <img src=" images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax </h5>
                             <h3>$450</h3>
@@ -196,12 +196,12 @@
                         </div>
                         <div class="card-footer border border-0 m-3">
                             <div class="btn btn-warning-btn">
-                             Buy Now
+                                Buy Now
                             </div>
-                         </div>
+                        </div>
                     </div>
                 </div>
-                
+
             </div>
         </section>
         <!-- shoes section end here  -->
@@ -222,14 +222,14 @@
                         </div>
                         <div class="card-footer border border-0 m-3">
                             <div class="btn btn-warning-btn">
-                             Buy Now
+                                Buy Now
                             </div>
-                         </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card border border-0 h-100  rounded shadow-lg"">
-                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <img src=" images/bags/bag-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">heavy one</h5>
                             <h3>$450</h3>
@@ -238,14 +238,14 @@
                         </div>
                         <div class="card-footer border border-0 m-3">
                             <div class="btn btn-warning-btn">
-                             Buy Now
+                                Buy Now
                             </div>
-                         </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card border border-0 h-100  rounded shadow-lg"">
-                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <img src=" images/bags/bag-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">bolder one</h5>
                             <h3>$450</h3>
@@ -254,32 +254,34 @@
                         </div>
                         <div class="card-footer border border-0 m-3">
                             <div class="btn btn-warning-btn">
-                             Buy Now
+                                Buy Now
                             </div>
-                         </div>
+                        </div>
                     </div>
                 </div>
-                
+
             </div>
 
         </section>
         <!-- bag section end  -->
         <!-- Subscribe start  -->
-        <section class="container mt-lg-5 mt-md-4 mt-sm-4 d-flex justify-content-center bg-danger bg-opacity-10 align-items-center" style="height: 300px;" id="subs">
+        <section
+            class="container mt-lg-5 mt-md-4 mt-sm-4 d-flex justify-content-center bg-danger bg-opacity-10 align-items-center"
+            style="height: 300px;" id="subs">
             <div>
                 <h2>LETS STAY IN TOUCH</h2>
-            <P>Get updates on sales, specials and more </P>
-            <form>
-                <div class="mb-3">
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                </div>
-                <button type="submit" class="btn btn-warning-btn">Submit</button>
-              </form>
+                <P>Get updates on sales, specials and more </P>
+                <form>
+                    <div class="mb-3">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <button type="submit" class="btn btn-warning-btn">Submit</button>
+                </form>
             </div>
         </section>
     </main>
     <footer>
-        <p class="text-center"><small> @2022Lorem, ipsum dolor sit amet consectetur</small></p>
+        <p class="text-center"><small> @2027 Lorem, ipsum dolor sit amet consectetur</small></p>
     </footer>
 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
